# jax-shape-guard

./: .gitignore  .readthedocs.yaml  JAX_ISSUES_ANALYSIS.md  LICENSE  MILESTONES.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: getting-started.md  index.md  motivation.md
docs/concepts/: jit-modes.md  unification.md
docs/guide/: batch-and-ellipsis.md  broadcasting.md  ml-helpers.md  shape-contracts.md
docs/reference/: broadcasting.md  config.md  core.md  decorators.md  errors.md  ml.md  validation.md
shapeguard/: __init__.py  _compat.py  broadcast.py  config.py  context.py  core.py  decorator.py  errors.py  ml.py  spec.py
tests/: __init__.py  conftest.py  test_batch.py  test_broadcast.py  test_config.py  test_context.py  test_contract.py  test_core.py  test_decorator.py  test_ellipsis.py  test_ensures.py  test_errors.py  test_jit_modes.py  test_ml.py  test_pytree.py  test_spec.py
