[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shapeguard"
version = "0.1.0b1"
description = "Runtime shape contracts and diagnostics for NumPy and JAX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jay" }
]
keywords = ["numpy", "jax", "shapes", "validation", "debugging", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy>=1.20",
]
jax = [
    "jax>=0.4",
    "jaxlib>=0.4",
]

[project.urls]
Homepage = "https://github.com/jay/shapeguard"
Repository = "https://github.com/jay/shapeguard"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["shapeguard"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
